@@ -10,6 +10,8 @@ matrix:
       env: PYTHON_VERSION=3.7 FLAGS="-v -n 2"
     - os: linux
       env: PYTHON_VERSION=3.7 FLAGS="-v --full -n 2"
+    - os: linux
+      env: PYTHON_VERSION=3.7 FLAGS="-v --full -n 2" PYFTTW="pyfftw"
     - os: osx
       env: PYTHON_VERSION=3.7 FLAGS="-v -n 2"
     - os: windows
@@ -21,7 +23,7 @@ before_install:
   - # set numpy<1.17 because of https://github.com/obspy/obspy/issues/2434, can be relaxed after next obspy release
   - conda create -q -n testenv
       python=$PYTHON_VERSION
-      coverage h5py matplotlib "numpy<1.17" obspy scipy tqdm
+      coverage h5py matplotlib "numpy<1.17" obspy $PYFTTW scipy tqdm
   - conda activate testenv
   - pip install obspyh5
   - conda list
